@@ -14,6 +14,7 @@ inc/Module/Install/WriteAll.pm
 lib/Hailo.pm
 lib/Hailo/Engine/Default.pm
 lib/Hailo/Role/Engine.pm
+lib/Hailo/Role/Generic.pm
 lib/Hailo/Role/Storage.pm
 lib/Hailo/Role/Tokenizer.pm
 lib/Hailo/Storage/Perl.pm
