@@ -1,4 +1,5 @@
 ^Makefile$
+^Hailo-
 \.old$
 \.bak$
 \.git
