@@ -6,7 +6,8 @@ use namespace::clean -except => 'meta';
 
 our $VERSION = '0.01';
 
-with 'Hailo::Role::Tokenizer';
+with qw(Hailo::Role::Generic
+        Hailo::Role::Tokenizer);
 
 my $APOSTROPHE    = qr/['’]/;
 my $DOTTED_WORD   = qr/\w+(?:\.\w+)?/;
