@@ -1,4 +1,6 @@
 0.02
+    - Add facility to pass arguments to storage/engine/tokenizer from
+      the command line or via Hailo->new()
     - Fix spelling error in Hailo's POD
     - --reply on the command line didn't work
 
